:bug: Harden datasource lifecycle and complete Spring infrastructure documentation